--- a/src/components/weather_page/formInput.css
+++ b/src/components/weather_page/formInput.css
@@ -5,7 +5,7 @@
 form input[name="city"],
 form input[name="country"] {
   background-color: transparent;
-  color: white;
+  color: black;
   border: none;
   border-bottom: 2px solid rgb(224, 219, 219) !important;
   border-radius: 0;
@@ -13,14 +13,16 @@ form input[name="country"] {
 }
 
 form input,
-::-webkit-input-placeholder {
-  /* color: white !important; */
+input ::-webkit-input-placeholder {
+  color: white !important;
   border: none !important;
+  background-color: transparent;
 }
 
 form input:focus {
-  /* background-color: transparent; */
-  background-color: black;
+  background-color: transparent !important;
+  color: white;
+
   box-shadow: none !important;
   border-bottom: 2px solid tomato !important;
 }
