--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url("./assets/images/weather.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
