--- a/src/components/weather_page/formInput.css
+++ b/src/components/weather_page/formInput.css
@@ -17,12 +17,46 @@ input ::-webkit-input-placeholder {
   color: white !important;
   border: none !important;
   background-color: transparent;
+  opacity: 1;
 }
 
 form input:focus {
   background-color: transparent !important;
   color: white;
-
   box-shadow: none !important;
   border-bottom: 2px solid tomato !important;
+}
+
+.custom-btn {
+  background-color: rgb(73, 23, 121) !important;
+  border: #fff !important;
+  padding: 10px 60px !important;
+}
+
+.custom-btn:hover {
+  background-color: rgb(228, 221, 212) !important;
+  color: blue !important;
+  -webkit-transform: scale(0.98);
+  transform: scale(0.98);
+}
+
+@media (max-width: 700px) {
+  .custom-btn {
+    font-size: 10px !important;
+    padding: 10px 20px !important;
+  }
+}
+
+@media (min-width: 700px) {
+  .custom-btn {
+    font-size: 10px !important;
+    padding: 10px 25px !important;
+  }
+}
+
+@media (max-width: 500px) {
+  .custom-btn {
+    font-size: 10px !important;
+    padding: 10px 15px !important;
+  }
 }
